syntax = "proto3";
package delta;

import "any.proto";

option go_package = ".;delta";

message Delta {
  enum Type {
    EditValue = 0;
    DeleteFromList = 1;
    AddToList = 2;
    MoveInList = 3;
  }
  Type type = 1;
  repeated Locator location = 2;
  google.protobuf.Any value = 3;
}

message Locator {
  oneof v {
    Field field = 1;
    int64 index = 2;
    string key = 3;
  }
}

message Field {
  string name = 1;
  int32 number = 2;
}

message Scalar {
  oneof v {
    double double = 1;
    float float = 2;
    int32 int32 = 3;
    int64 int64 = 4;
    uint32 uint32 = 5;
    uint64 uint64 = 6;
    sint32 sint32 = 7;
    sint64 sint64 = 8;
    fixed32 fixed32 = 9;
    fixed64 fixed64 = 10;
    sfixed32 sfixed32 = 11;
    sfixed64 sfixed64 = 12;
    bool bool = 13;
    string str = 14;
    bytes bytes = 15;
  }
}
